Sun Jun  8 23:28:00 2014    <kanemoto@ruby-lang.org>

	* io.c (rb_io_advise): AIX currently does not support a 32-bit call to
	  posix_fadvise() if _LARGE_FILES is defined. Patch by Rei Odaira.
	  [ruby-core:62968] [Bug #9914]

Sun Jun  8 04:52:40 2014  Jun Hiroe  <Jun.Hiroe@gmail.com>

	* string.c (rb_str_slice_bang): [DOC] update return value against
	  a fixnum, which has changed because of M17N.  [fix GH-631]

Sat Jun  7 22:13:42 2014  Benoit Daloze  <eregontp@gmail.com>

	* numeric.c (do_coerce): Add a warning when an exception is raised
	  or an invalid value is returned in #coerce called by
	  numeric comparison operators and the exception
	  thrown by the caller has no information on the failure.
	  In the next release such exception should not be rescued or
	  should be the cause of the caller exception. nil is accepted
	  as the "no possible coercion" return value. See #7688.

	* test/ruby/test_numeric.rb: Add corresponding test.

Sat Jun  7 18:15:33 2014  Benoit Daloze  <eregontp@gmail.com>

	* numeric.c (bit_coerce): remove constant parameter `err'
	  (always TRUE) of bit_coerce().

Sat Jun  7 16:01:57 2014  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* cont.c (rb_fiber_struct): keep context.uc_stack.ss_sp and context.uc_stack.ss_size
	  for later use. Patch by Rei Odaira. [ruby-core:62945] [Bug #9905]

Sat Jun  7 12:51:51 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (read_all): truncate the buffer before appending read data,
	  instead of truncating before reading.
	  [ruby-core:55951] [Bug #8625]

Sat Jun  7 12:28:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/digest.c (rb_digest_instance_equal): no need to call
	  `to_s` twice.  [Bug #9913]

Sat Jun  7 11:35:01 2014  Tanaka Akira  <akr@fsij.org>

	* object.c (rb_mod_initialize_clone): Override Kernel#initialize_clone
	  to avoid an exception on Class.new.freeze.clone.to_s.
	  Reported by Andrew Grimm.  [ruby-core:41858] [Bug #5828]
